fix(incidents): durable stage frontier, sealed freeze, replayable deltas, loaded budget